refine column impl + add table name functionality & refactor several methods accordingly